--- a/.ideavimrc
+++ b/.ideavimrc
@@ -8,7 +8,7 @@
 " Show a few lines of context around the cursor. Note that this makes the
 " text scroll if you mouse-click near the start or end of the window.
 set scrolloff=5
-
+let mapleader=" "
 " Do incremental searching.
 set incsearch
 
@@ -21,12 +21,15 @@ map Q gq
 Plug 'machakann/vim-highlightedyank'
 " Commentary plugin
 Plug 'tpope/vim-commentary'
+" quick-scope plugin to highlight first letters of words
+set quickscope
+let g:qs_highlight_on_keys = ['f', 'F', 't', 'T']
 
 "" Set relativenumber
 set number relativenumber
 
 "" Set Clipboard to system
-set clipboard+=unnamed
+set clipboard^=unnamedplus,unnamed
 
 "" -- Map IDE actions to IdeaVim -- https://jb.gg/abva4t
 "" Map \r to the Reformat Code action
