--- a/.ideavimrc
+++ b/.ideavimrc
@@ -59,3 +59,4 @@ nmap <leader>s <Action>(ShowUsages)
 nmap <leader>u <Action>(FindUsages)
 nmap <leader>v <Action>(Vcs.QuickListPopupAction)
 nmap <leader>x <Action>(HideAllWindows)
+nmap <leader>wu <Action>(Unsplit)
