--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,5 @@
 	enabled = true
 [branch]
 	sort = -committerdate
+[maintenance]
+	repo = C:/Users/gieraale/PROJECTS/monorepo/new2/scs-maven-parent
